--- a/b20a701bdb/index.html
+++ b/b20a701bdb/index.html
@@ -90,7 +90,7 @@
     <div class="container">
       <h1>Welcome to MoneyIsBlogging</h1>
       <p>Insights, tips, and strategies for smarter trading.</p>
-      <a href="#" class="btn btn-warning btn-lg">Read Our Latest Posts</a>
+      <a href="blog.html" class="btn btn-warning btn-lg">Read Our Latest Posts</a>
     </div>
   </div>
 
@@ -144,7 +144,7 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-      <p>&copy; 2024 Dev. All rights reserved. | <a href="#">Privacy Policy</a></p>
+      <p>&copy; 2024 Dev. All rights reserved. | <a href="privacyPolicy.html">Privacy Policy</a></p>
     </div>
   </footer> 
 <!-- Latest compiled and minified CSS -->
