--- a/b20a701bdb/index.html
+++ b/b20a701bdb/index.html
@@ -16,6 +16,7 @@
     }
 
     .hero-section {
+        word-wrap: break-word;
         background-image: url('https://via.placeholder.com/1920x600');
         background-image: url('https://picsum.photos/1920/600');
         background-size: cover;
@@ -88,7 +89,7 @@
   <!-- Hero Section -->
   <div class="hero-section">
     <div class="container">
-      <h1>Welcome to MoneyIsBlogging</h1>
+      <h1>Welcome to <h2>MoneyIsBlogging</h2></h1>
       <p>Insights, tips, and strategies for smarter trading.</p>
       <a href="blog.html" class="btn btn-warning btn-lg">Read Our Latest Posts</a>
     </div>
