--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         // Define variables for the destination page name and URL
         var destinationPage = {
             name: "Blog site",
-            url: "b20a701bdb"
+            url: "b20a701bdbNEW"
         };
         
         window.onload = function() {
